rspec-tools/tests/resources/invalid-rules/S200/cobol/rule.adoc
== Why is this an issue?
== How to fix it
// there's a typo, it's "Code examples"
=== Coding examples
== Resources
